--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400&family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@700&family=Poppins:wght@300&display=swap" rel="stylesheet"> 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logoQbook.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
